--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
+
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a class="logo link" href="./index.html">
@@ -57,15 +59,15 @@
         </address>
       </div>
     </header>
-    <main>
-      <section class="hero">
+    <main> -->
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <section class="sectionone">
         <div class="container">
           <h2 class="visually-hidden">section one</h2>
@@ -121,7 +123,7 @@
           </ul>
         </div>
       </section>
-      <section class="our-work">
+      <!-- <section class="our-work">
         <div class="container">
           <h2 class="our-work-title">What are we doing</h2>
           <ul class="our-work-list list">
@@ -151,8 +153,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="ourteam">
+      </section> -->
+      <!-- <section class="ourteam">
         <div class="container">
           <h2 class="ourteam-title">Our Team</h2>
           <ul class="ourteam-list list">
@@ -406,8 +408,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="customers">
+      </section> -->
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -485,9 +487,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-box">
         <div class="footer-logo-box">
           <a class="logo link logofooter" href="./index.html">
@@ -570,7 +572,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backgrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
