--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/media.css" />
-
   </head>
   <body>
     <!-- <header class="header">
@@ -58,16 +57,16 @@
           </ul>
         </address>
       </div>
-    </header>
-    <main> -->
-      <!-- <section class="hero">
+    </header> -->
+    <main>
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <section class="sectionone">
         <div class="container">
           <h2 class="visually-hidden">section one</h2>
@@ -123,7 +122,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="our-work">
+      <section class="our-work notour-work">
         <div class="container">
           <h2 class="our-work-title">What are we doing</h2>
           <ul class="our-work-list list">
@@ -153,8 +152,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="ourteam">
+      </section>
+      <section class="ourteam">
         <div class="container">
           <h2 class="ourteam-title">Our Team</h2>
           <ul class="ourteam-list list">
@@ -408,8 +407,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="customers">
+      </section>
+      <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -420,7 +419,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="customers-sosial-icon" width="104" height="56">
+                <svg class="customers-sosial-icon" width="110" height="56">
                   <use href="./images/icons.svg#icon-logo1"></use>
                 </svg>
               </a>
@@ -432,7 +431,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="customers-sosial-icon" width="104" height="56">
+                <svg class="customers-sosial-icon" width="110" height="56">
                   <use href="./images/icons.svg#icon-logo2"></use>
                 </svg>
               </a>
@@ -444,7 +443,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="customers-sosial-icon" width="104" height="56">
+                <svg class="customers-sosial-icon" width="110" height="56">
                   <use href="./images/icons.svg#icon-logo3"></use>
                 </svg>
               </a>
@@ -487,7 +486,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-box">
