--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </button>
           <ul class="mob-menu-list list">
             <li class="mob-menu-item">
-              <a class="mob-menu-link link" href="./index.html">Studio</a>
+              <a class="mob-menu-link link blue" href="./index.html">Studio</a>
             </li>
             <li class="mob-menu-item">
               <a class="mob-menu-link link" href="./portfolio.html"
@@ -224,8 +224,8 @@
             <li class="our-work-item">
               <img
                 srcset="
-                  ./images/section2/img1.jpg   1x,
-                  /images/section2/img1-2x.jpg 2x
+                  ./images/section2/img1.jpg    1x,
+                  ./images/section2/img1-2x.jpg 2x
                 "
                 class="our-work-img"
                 src="./images/section2/img1.jpg"
@@ -236,8 +236,8 @@
             <li class="our-work-item">
               <img
                 srcset="
-                  ./images/section2/img2.jpg   1x,
-                  /images/section2/img2-2x.jpg 2x
+                  ./images/section2/img2.jpg    1x,
+                  ./images/section2/img2-2x.jpg 2x
                 "
                 class="our-work-img"
                 src="./images/section2/img2.jpg"
@@ -248,8 +248,8 @@
             <li class="our-work-item">
               <img
                 srcset="
-                  ./images/section2/img3.jpg   1x,
-                  /images/section2/img3-2x.jpg 2x
+                  ./images/section2/img3.jpg    1x,
+                  ./images/section2/img3-2x.jpg 2x
                 "
                 class="our-work-img"
                 src="./images/section2/img3.jpg"
@@ -267,8 +267,8 @@
             <li class="ourteam-item">
               <img
                 srcset="
-                  ./images/section3/img1.jpg   1x,
-                  /images/section3/img1-2x.jpg 2x
+                  ./images/section3/img1.jpg    1x,
+                  ./images/section3/img1-2x.jpg 2x
                 "
                 class="ourteam-item-img"
                 src="./images/section3/img1.jpg"
@@ -333,8 +333,8 @@
             <li class="ourteam-item">
               <img
                 srcset="
-                  ./images/section3/img2.jpg   1x,
-                  /images/section3/img2-2x.jpg 2x
+                  ./images/section3/img2.jpg    1x,
+                  ./images/section3/img2-2x.jpg 2x
                 "
                 class="ourteam-item-img"
                 src="./images/section3/img2.jpg"
@@ -399,8 +399,8 @@
             <li class="ourteam-item">
               <img
                 srcset="
-                  ./images/section3/img3.jpg   1x,
-                  /images/section3/img3-2x.jpg 2x
+                  ./images/section3/img3.jpg    1x,
+                  ./images/section3/img3-2x.jpg 2x
                 "
                 class="ourteam-item-img"
                 src="./images/section3/img3.jpg"
@@ -465,8 +465,8 @@
             <li class="ourteam-item">
               <img
                 srcset="
-                  ./images/section3/img4.jpg   1x,
-                  /images/section3/img4-2x.jpg 2x
+                  ./images/section3/img4.jpg    1x,
+                  ./images/section3/img4-2x.jpg 2x
                 "
                 class="ourteam-item-img"
                 src="./images/section3/img4.jpg"
